Wed Dec 26 06:19:32 2001  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* examples/Reactor/Misc/test_reactors.cpp: Removed a duplicate
	  ACE_Atomic_Op_Ex<ACE_Thread_Mutex, int> instantiation.

Tue Dec 25 19:43:34 2001  Balachandran Natarajan  <bala@cs.wustl.edu>

	* Updated dependencies that were left behind from the last one. 

Tue Dec 25 09:30:14 2001  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* tests/Makefile: 
  	* tests/Makefile.bor: Added the new Proactor_Timer_Test.
    
	* tests/run_test.lst: Added the new Proactor_Timer_Test.

	* tests: Added the new Proactor_Timer_Test.cpp and
	  Proactor_Timer_Test.dsp to exercise the new high-resolution
 	  support in the ACE_Proactor.  Thanks to Miljenko Norsic for
 	  contributing this.
  
	* ace/Proactor.cpp: Added support for high-resolution timers to
	  the proactor.  Thanks to Miljenko Norsic for contributing this.

	* ace/OS.{h,i}:  Changed the ACE_OS::event_timedwait() method to
	  allow callers to specify either relative or absolute time.
  	  Thanks to Miljenko Norsic <Miljenko.Norsic@etk.ericsson.se> for
 	  contributing this.

	* ace/Synch.{h,cpp}: Changed the timed wait() method on ACE_Event so
	  allow callers to specify either relative or absolute time.
  	  Thanks to Miljenko Norsic <Miljenko.Norsic@etk.ericsson.se> for
 	  contributing this.
  
Tue Dec 25 12:55:56 2001  Carlos O'Ryan  <coryan@uci.edu>

	* Updated all dependencies.

Tue Dec 25 09:30:14 2001  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* tests/Get_Opt_Test.cpp: Make the "test_args" parameter to 
	  parse_args() a *const* ACE_TCHAR rather than just an ACE_TCHAR.
	
	* tests/Get_Opt_Test.cpp (main): Added an ACE_UNUSED_ARG(argv) and
	  replaced the name of the test so the log file stuff will work
 	  properly.

	* ace/Get_Opt.{h,i}: Changed the return type of opt_ind() from
	  int to int& so that optind++ will work correctly!  Thanks
	  to Don Hinton for this fix.
